gitops/platform-apps/traefik-manager/authentik-callback-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-manager-authentik-callback
  namespace: traefik-manager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-manager.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          port: 80
  tls: {}
